@@ -61,6 +61,25 @@
 #
 #provide_console_gop
 
+# When GOP drivers, which are UEFI 2.x drivers, are implemented according to the
+# associated UEFI 2.x Specs, they do not work on certain devices as the UEFI 2.x
+# Specs mandate that on installation, a GOP driver should check if the device is
+# UEFI 2.x compliant and fail if it is not. Hence, UEFI 2.x GOP implementation,
+# does not activate on Classic MacPros for instance, as these are not actually
+# UEFI 2.x devices but EFI 1.x devices to which Apple has added a chunk of, but
+# not all of, the UEFI 2.x capabilities. When this token is activated, RefindPlus
+# will temporarily amend the device EFI Revision to UEFI 2.x, emulate the UEFI 2.x
+# CreateEventEx capability and attempt reinstalling a copy of the GPU's Option ROM
+# whenever it detects that GOP is not available. RefindPlus will revert the changes
+# made after the attempted reinstallation. This process allows running some modern
+# GPUs, notably from Nvidia, on legacy computers such as Classic MacPros when they
+# would otherwise fail to work. This token should be deactivated when using GPUs
+# with UGA graphics mode as they do not benefit from this feature.
+#
+# Inactive when commented out (Does not reinstall GOP)
+#
+#reinstall_gop
+
 # Use a built-in GOP renderer which may provide better performance
 # and fix rendering issues on some GPU/firmware combinations such as
 # the Radeon VII and some versions of the Radeon 5700 XT. However,
