@@ -15,7 +15,9 @@
   * This is because several links are only revealed after a first pass
   * Trades a typically imperceptible increase in boot time for improved stability and reliability
   * NB: The first pass is silent and is not logged
-
+- Adds 'reinstall_gop' as Configuration Option
+  * This allows switching the 'Reinstall GOP from RAM' Feature, introduced in v0.12.0.AM,
+    "ON" or "OFF" in the configuration file. Default is "OFF"
 
 0.13.1.AB (02 Mar 2021):
 - Fixes APFS ReMapping
